# clazza-bot-v2

./: Cargo.toml  Dockerfile  Makefile  bacon.toml  docker-compose-dev.yml  docker-compose.yml
src/bot/: Cargo.toml
src/bot/src/: main.rs
src/bot/src/commands/: dap.rs  hello.rs  mod.rs  randomizer.rs  tag.rs
src/bot/src/economy/: balance.rs  gamble.rs  leaderboard.rs  mod.rs  other_balance.rs  reset.rs
src/bot/src/randomizers/: coinflip.rs  downbad.rs  mod.rs  noob.rs  ping.rs  rizz.rs
src/bot/src/tags/: hug.rs  kiss.rs  mod.rs
src/command/: Cargo.toml
src/command-macro/: Cargo.toml
src/command-macro/src/: lib.rs
src/command/src/: lib.rs
src/command/src/command/: def.rs  guards.rs  manager.rs  mod.rs  result.rs
src/command/src/utils/: args.rs
src/db/: Cargo.toml
src/db/src/: lib.rs
src/db/src/entities/: mod.rs  user.rs
src/db/src/migrations/: m20232910_000001_initial.rs  mod.rs
src/twitch/: Cargo.toml
src/twitch/src/: client.rs  credentials.rs  lib.rs
src/twitch/src/providers/: simple.rs
src/utils/: Cargo.toml
src/utils/src/: async_lock.rs  event_emitter.rs  lib.rs  macros.rs  random.rs  string.rs  time.rs
src/watcher/: Cargo.toml
src/watcher/src/: lib.rs
