[package]
name = "bot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace
twitch = { path = "../twitch" }
command = { path = "../command" }
watcher = { path = "../watcher" }
utils = { path = "../utils" }

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Logging
log = "0.4"
pretty_env_logger = "0.5"

# Misc
anyhow = "1"
dotenv = "0.15"
once_cell = "1"
rand = "0.8"
