[package]
name = "db"
version = "0.1.0"
edition = "2021"

[dependencies.sea-orm]
version = "0"
features = ["macros", "sqlx-postgres", "runtime-tokio-rustls"]

[dependencies.sea-orm-migration]
version = "0.12"
features = ["sqlx-postgres", "runtime-tokio-rustls"]

[dependencies]
tokio = { version = "1", features = ["full"] }
