[package]
name = "twitch"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace
utils = { path = "../utils" }

# Twitch
twitch-irc = { version = "5", default_features = false, features = ["transport-ws", "transport-ws-rustls-native-roots"] }
twitch_api = { version = "0.7.0-rc.7", features = ["client", "helix", "unsupported"] }

# Async
async-rwlock = "1"
async-trait = "0.1"
tokio = "1"

# Errors
anyhow = "1"
thiserror = "1"
